🎨 Update query 순서 유지하도록 기능 변경