@@ -1,11 +1,11 @@
 package programmers.org.voucher.repository.util;
 
-import programmers.org.voucher.repository.util.constant.Table;
-
 import java.util.ArrayList;
 import java.util.List;
 
 public class Update {
+    private static final List<String> sql = new ArrayList<>();
+
     private String query;
 
     private Update(String query) {
@@ -16,42 +16,59 @@ public class Update {
         return query;
     }
 
-    public static Builder builder() {
-        return new Builder();
+    public static UpdateBuilder builder() {
+        return new UpdateBuilder();
+    }
+
+    public static class UpdateBuilder {
+        private UpdateBuilder() {
+        }
+
+        public SetBuilder update(Class table) {
+            sql.add(table.getSimpleName());
+
+            return new SetBuilder();
+        }
+    }
+
+    public static class SetBuilder {
+        private static final String SET = "SET";
+
+        private SetBuilder() {
+
+        }
+
+        public WhereBuilder set(String column, Object value) {
+            String statement = String.format("%s %s = %s", SET, column, value);
+            sql.add(statement);
+
+            return new WhereBuilder();
+        }
+    }
+
+    public static class WhereBuilder {
+
+        private WhereBuilder() {
+        }
+
+        public Builder where(Where where) {
+            sql.add(where.getQuery());
+            return new Builder();
+        }
     }
 
     public static class Builder {
 
         private static final String UPDATE = "UPDATE";
-        private static final String SET = "SET";
-
-        private List<String> query = new ArrayList<>();
 
         private Builder() {
-        }
 
-        public Builder update(Table table) {
-            query.add(table.name());
-
-            return this;
-        }
-
-        public Builder set(String column, Object value) {
-            String statement = String.format("%s %s = %s", SET, column, value);
-            query.add(statement);
-
-            return this;
-        }
-
-        public Builder where(Where where) {
-            query.add(where.getQuery());
-            return this;
         }
 
         public Update build() {
-            String queryJoin = String.join(" ", query);
-            String query = String.format("%s %s", UPDATE, queryJoin);
-            return new Update(query);
+            String join = String.join(" ", sql);
+            sql.clear();
+            return new Update("%s %s".formatted(UPDATE, join));
         }
     }
 }
